--- a/json_flattener.ipynb
+++ b/json_flattener.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 800,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,13 +20,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 830,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#data = json.load(open('donuts.json'))\n",
-    "#data = json.load(open('startups.json'))\n",
-    "data = json.load(open('restaurants.json'))"
+    "data = json.load(open('donuts_original.json'))\n",
+    "#data = json.load(open('startups_original.json'))\n",
+    "#data = json.load(open('restaurants_original.json'))\n",
+    "#data = json.load(open('accounts_original.json'))"
    ]
   },
   {
@@ -38,20 +39,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 665,
+   "execution_count": 831,
    "metadata": {},
    "outputs": [],
    "source": [
     "def store_dict(key, value):\n",
-    "    print(key)\n",
-    "    print(value)\n",
     "    if key in store_data:\n",
-    "        ####>>>>>>\n",
-    "        lst = []\n",
-    "        lst.append(store_data[key])\n",
-    "        lst.append(value)\n",
-    "        print(\"Appended list for key\", key, \" --> \", lst)\n",
-    "        store_data[key] = lst\n",
+    "        store_data[key].append(value)\n",
     "    else:\n",
     "        lst = []\n",
     "        lst.append(value)\n",
@@ -68,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 666,
+   "execution_count": 832,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,58 +84,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 667,
+   "execution_count": 833,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_primitive_data_types(ele):\n",
     "    store_type = []\n",
-    "    for i in ele.keys():\n",
-    "        #print(ele)\n",
-    "        store_type.append(type(ele[i]))\n",
-    "        #print(type(ele[i]))\n",
     "    \n",
-    "    filter = []\n",
+    "    if (isinstance(ele, dict) or isinstance(ele, list)):\n",
     "    \n",
-    "    for j in store_type:\n",
-    "        filter.append((not issubclass(j, dict) and not issubclass(j, list)))\n",
-    "        \n",
-    "    #return (list(compress(ele.keys(), filter)))\n",
-    "    new_dict = { your_key: ele[your_key] for your_key in list(compress(ele.keys(), filter)) }\n",
-    "    \n",
-    "    return new_dict"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Test for primitive data types"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 668,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'borough': 'Bronx',\n",
-       " 'cuisine': 'Bakery',\n",
-       " 'id': '58b868503c6f4d322fa8f552',\n",
-       " 'name': 'Morris Park Bake Shop'}"
-      ]
-     },
-     "execution_count": 668,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data = json.load(open('restaurants.json'))\n",
+    "        for i in ele.keys():\n",
+    "            store_type.append(type(ele[i]))\n",
     "\n",
-    "get_primitive_data_types(data['restaurants'][0])\n"
+    "        filter = []\n",
+    "\n",
+    "        for j in store_type:\n",
+    "            filter.append((not issubclass(j, dict) and not issubclass(j, list)))\n",
+    "\n",
+    "        new_dict = { your_key: ele[your_key] for your_key in list(compress(ele.keys(), filter)) }\n",
+    "\n",
+    "        return new_dict\n",
+    "    else:\n",
+    "        return ele"
    ]
   },
   {
@@ -153,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 669,
+   "execution_count": 834,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,95 +125,87 @@
     "    \n",
     "    # The topmost parent obtained here\n",
     "    if parent_key == None:\n",
-    "        parent_key = list(data.keys())[0] \n",
+    "        parent_key = list(d.keys())[0] \n",
     "    \n",
-    "    for k,v in d.items():\n",
-    "        \n",
-    "        if k != parent_key:\n",
-    "            new_parent_key = parent_key+'_'+k\n",
-    "        else:\n",
-    "            new_parent_key = k\n",
-    "            \n",
-    "        # Handle an incoming list\n",
-    "        if isinstance(v, list):    \n",
-    "            for k in range(0, len(v)):\n",
-    "                #print(k)\n",
-    "                print(\"\\nA list --> [\",new_parent_key,\"]\", get_primitive_data_types(v[k]), '\\n')\n",
+    "    if (not isinstance(d, int)):\n",
+    "        for k,v in d.items():\n",
+    "\n",
+    "            if k != parent_key:\n",
+    "                new_parent_key = parent_key+'_'+k\n",
+    "            else:\n",
+    "                new_parent_key = k\n",
+    "\n",
+    "            # Handle an incoming list\n",
+    "            if isinstance(v, list):    \n",
+    "                for k in range(0, len(v)):\n",
+    "                    #print(k)\n",
+    "                    #print(\"\\nA list --> [\",new_parent_key,\"]\", get_primitive_data_types(v[k]), '\\n')\n",
+    "\n",
+    "                    # Store the data in memory\n",
+    "                    store_dict(new_parent_key, get_primitive_data_types(v[k]))\n",
+    "\n",
+    "                for i in range(1,len(v)+1):\n",
+    "                    flatten_json(v[i-1], new_parent_key)\n",
+    "\n",
+    "            # Handle an incoming dict\n",
+    "            elif isinstance(v, dict):\n",
+    "                #print(\"A dict --> [\",new_parent_key,\"]\", v, '\\n')\n",
     "\n",
     "                # Store the data in memory\n",
-    "                store_dict(new_parent_key, get_primitive_data_types(v[k]))\n",
+    "                store_dict(new_parent_key, v)\n",
     "\n",
-    "            for i in range(1,len(v)+1):\n",
-    "                flatten_json(v[i-1], new_parent_key)\n",
-    "       \n",
-    "        # Handle an incoming dict\n",
-    "        elif isinstance(v, dict):\n",
-    "            print(\"A dict --> [\",new_parent_key,\"]\", v, '\\n')\n",
-    "            \n",
-    "            flatten_json(v, new_parent_key)\n",
-    "      "
+    "                flatten_json(v, new_parent_key)\n",
+    "    else:\n",
+    "        store_dict(parent_key, d)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Test flatten JSON and write to files"
+    "### Test flatten JSON"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 670,
+   "execution_count": 835,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "A list --> [ restaurants ] {'id': '58b868503c6f4d322fa8f552', 'borough': 'Bronx', 'cuisine': 'Bakery', 'name': 'Morris Park Bake Shop'} \n",
-      "\n",
-      "restaurants\n",
-      "{'id': '58b868503c6f4d322fa8f552', 'borough': 'Bronx', 'cuisine': 'Bakery', 'name': 'Morris Park Bake Shop'}\n",
-      "A dict --> [ restaurants_address ] {'building': '1007', 'coord': '[-73.856077, 40.848447]', 'street': 'Morris Park Ave', 'zipcode': '10462'} \n",
-      "\n",
-      "\n",
-      "A list --> [ restaurants_grades ] {'date': '2014-03-03T00:00:00.000Z', 'grade': 'A'} \n",
-      "\n",
-      "restaurants_grades\n",
-      "{'date': '2014-03-03T00:00:00.000Z', 'grade': 'A'}\n",
-      "\n",
-      "A list --> [ restaurants_grades ] {'date': '2011-11-23T00:00:00.000Z', 'grade': 'A'} \n",
-      "\n",
-      "restaurants_grades\n",
-      "{'date': '2011-11-23T00:00:00.000Z', 'grade': 'A'}\n",
-      "Appended list for key restaurants_grades  -->  [[{'date': '2014-03-03T00:00:00.000Z', 'grade': 'A'}], {'date': '2011-11-23T00:00:00.000Z', 'grade': 'A'}]\n",
-      "A dict --> [ restaurants_grades_score ] {'x': 1, 'y': 2} \n",
-      "\n",
-      "A dict --> [ restaurants_grades_score ] {'x': 11, 'y': 22} \n",
-      "\n"
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n"
      ]
     }
    ],
    "source": [
     "store_data = {}\n",
     "\n",
-    "flatten_json(data)\n",
-    "\n",
-    "\n",
-    "#write_JSON_files(store_data)"
+    "flatten_json(data)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Test the JSON stored data in memory (see contents)"
+    "### Pretty print the JSON stored data in memory"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 672,
+   "execution_count": 836,
    "metadata": {},
    "outputs": [
     {
@@ -257,32 +213,75 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"restaurants\": [\n",
-      "    {\n",
-      "      \"id\": \"58b868503c6f4d322fa8f552\",\n",
-      "      \"borough\": \"Bronx\",\n",
-      "      \"cuisine\": \"Bakery\",\n",
-      "      \"name\": \"Morris Park Bake Shop\"\n",
-      "    }\n",
-      "  ],\n",
-      "  \"restaurants_grades\": [\n",
-      "    [\n",
+      "   \"donuts\": [\n",
       "      {\n",
-      "        \"date\": \"2014-03-03T00:00:00.000Z\",\n",
-      "        \"grade\": \"A\"\n",
+      "         \"calories\": 550,\n",
+      "         \"id\": \"1\",\n",
+      "         \"name\": \"chocolate frosted\",\n",
+      "         \"type\": \"donut\"\n",
       "      }\n",
-      "    ],\n",
-      "    {\n",
-      "      \"date\": \"2011-11-23T00:00:00.000Z\",\n",
-      "      \"grade\": \"A\"\n",
-      "    }\n",
-      "  ]\n",
+      "   ],\n",
+      "   \"donuts_batter\": [\n",
+      "      {\n",
+      "         \"types\": [\n",
+      "            {\n",
+      "               \"type\": \"Regular\"\n",
+      "            },\n",
+      "            {\n",
+      "               \"type\": \"Chocolate\"\n",
+      "            },\n",
+      "            {\n",
+      "               \"type\": \"Blueberry\"\n",
+      "            },\n",
+      "            {\n",
+      "               \"type\": \"Devil's Food\"\n",
+      "            }\n",
+      "         ]\n",
+      "      }\n",
+      "   ],\n",
+      "   \"donuts_batter_types\": [\n",
+      "      {\n",
+      "         \"type\": \"Regular\"\n",
+      "      },\n",
+      "      {\n",
+      "         \"type\": \"Chocolate\"\n",
+      "      },\n",
+      "      {\n",
+      "         \"type\": \"Blueberry\"\n",
+      "      },\n",
+      "      {\n",
+      "         \"type\": \"Devil's Food\"\n",
+      "      }\n",
+      "   ],\n",
+      "   \"donuts_toppings\": [\n",
+      "      {\n",
+      "         \"type\": \"None\"\n",
+      "      },\n",
+      "      {\n",
+      "         \"type\": \"Glazed\"\n",
+      "      },\n",
+      "      {\n",
+      "         \"type\": \"Sugar\"\n",
+      "      },\n",
+      "      {\n",
+      "         \"type\": \"Powdered Sugar\"\n",
+      "      },\n",
+      "      {\n",
+      "         \"type\": \"Chocolate with Sprinkles\"\n",
+      "      },\n",
+      "      {\n",
+      "         \"type\": \"Chocolate\"\n",
+      "      },\n",
+      "      {\n",
+      "         \"type\": \"Maple\"\n",
+      "      }\n",
+      "   ]\n",
       "}\n"
      ]
     }
    ],
    "source": [
-    "print(json.dumps(store_data, indent=2))"
+    "print(json.dumps(store_data, indent=3))"
    ]
   },
   {
@@ -294,15 +293,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 491,
+   "execution_count": 829,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Writing JSON files:\n",
+      "\n",
       "restaurants.json\n",
-      "restaurants_grades.json\n"
+      "restaurants_address.json\n",
+      "restaurants_grades.json\n",
+      "restaurants_grades_score.json\n"
      ]
     }
    ],
